# functions/src/controllers/categories.controller.ts
@@ -4,15 +4,18 @@ import { CategoryService } from "../services/category.service.js";
 
 export class CategoriesController {
     static async getAll(req: Request, res: Response) {
+        // #swagger.tags = ['Categories']
         res.send(await new CategoryService().getAll());
     }
 
     static async getById(req: Request, res: Response) {
+        // #swagger.tags = ['Categories']
         const categoryId = req.params.id;
         res.send(await new CategoryService().getById(categoryId));
     }
 
     static async save(req: Request, res: Response) {
+        // #swagger.tags = ['Categories']
         await new CategoryService().save(req.body);
         res.status(201).send({
             message: `Categoria criada com sucesso!`
@@ -20,6 +23,7 @@ export class CategoriesController {
     }
 
     static async update(req: Request, res: Response) {
+        // #swagger.tags = ['Categories']
         const categoryId = req.params.id;
         const category = req.body as Category;
         await new CategoryService().update(categoryId, category);
@@ -29,6 +33,7 @@ export class CategoriesController {
     }
 
     static async delete(req: Request, res: Response) {
+        // #swagger.tags = ['Categories']
         const categoryId = req.params.id;
         await new CategoryService().delete(categoryId);
         res.status(204).end();
