# functions/src/controllers/companies.controller.ts
@@ -4,15 +4,18 @@ import { CompanyService } from "../services/company.service.js";
 
 export class CompaniesController {
     static async getAll(req: Request, res: Response) {
+        // #swagger.tags = ['Companies']
         res.send(await new CompanyService().getAll());
     }
 
     static async getById(req: Request, res: Response) {
+        // #swagger.tags = ['Companies']
         const companyId = req.params.id;
         res.send(await new CompanyService().getById(companyId));
     }
 
     static async save(req: Request, res: Response) {
+        // #swagger.tags = ['Companies']
         await new CompanyService().save(req.body);
         res.status(201).send({
             message: `Empresa criada com sucesso!`
@@ -20,6 +23,7 @@ export class CompaniesController {
     }
 
     static async update(req: Request, res: Response) {
+        // #swagger.tags = ['Companies']
         const companyId = req.params.id;
         const company = req.body as Company;
         await new CompanyService().update(companyId, company);
