# functions/src/docs/swagger-output.json
@@ -11,9 +11,42 @@
       "description": "Dev"
     }
   ],
+  "tags": [
+    {
+      "name": "Auth",
+      "description": "Autenticação de usuários"
+    },
+    {
+      "name": "Users",
+      "description": "Gestão de usuários"
+    },
+    {
+      "name": "Companies",
+      "description": "Gestão de empresas"
+    },
+    {
+      "name": "Categories",
+      "description": "Gestão das categorias de produtos"
+    },
+    {
+      "name": "Products",
+      "description": "Catálogo de produtos da empresa"
+    },
+    {
+      "name": "Payment Methods",
+      "description": "Gestão das formas de pagamento"
+    },
+    {
+      "name": "Orders",
+      "description": "Gestão de pedidos"
+    }
+  ],
   "paths": {
     "/auth/login": {
       "post": {
+        "tags": [
+          "Auth"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -41,6 +74,9 @@
     },
     "/auth/recovery": {
       "post": {
+        "tags": [
+          "Auth"
+        ],
         "description": "",
         "responses": {
           "default": {
@@ -65,6 +101,9 @@
     },
     "/auth/signin": {
       "post": {
+        "tags": [
+          "Auth"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -75,6 +114,9 @@
     },
     "/users": {
       "get": {
+        "tags": [
+          "Users"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -83,6 +125,9 @@
         }
       },
       "post": {
+        "tags": [
+          "Users"
+        ],
         "description": "",
         "responses": {
           "201": {
@@ -93,6 +138,9 @@
     },
     "/users/{id}": {
       "get": {
+        "tags": [
+          "Users"
+        ],
         "description": "",
         "parameters": [
           {
@@ -111,6 +159,9 @@
         }
       },
       "put": {
+        "tags": [
+          "Users"
+        ],
         "description": "",
         "parameters": [
           {
@@ -129,6 +180,9 @@
         }
       },
       "delete": {
+        "tags": [
+          "Users"
+        ],
         "description": "",
         "parameters": [
           {
@@ -149,6 +203,9 @@
     },
     "/companies": {
       "get": {
+        "tags": [
+          "Companies"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -157,6 +214,9 @@
         }
       },
       "post": {
+        "tags": [
+          "Companies"
+        ],
         "description": "",
         "responses": {
           "201": {
@@ -167,6 +227,9 @@
     },
     "/companies/{id}": {
       "get": {
+        "tags": [
+          "Companies"
+        ],
         "description": "",
         "parameters": [
           {
@@ -185,6 +248,9 @@
         }
       },
       "put": {
+        "tags": [
+          "Companies"
+        ],
         "description": "",
         "parameters": [
           {
@@ -205,6 +271,9 @@
     },
     "/categories": {
       "get": {
+        "tags": [
+          "Categories"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -213,6 +282,9 @@
         }
       },
       "post": {
+        "tags": [
+          "Categories"
+        ],
         "description": "",
         "responses": {
           "201": {
@@ -223,6 +295,9 @@
     },
     "/categories/{id}": {
       "get": {
+        "tags": [
+          "Categories"
+        ],
         "description": "",
         "parameters": [
           {
@@ -241,6 +316,9 @@
         }
       },
       "put": {
+        "tags": [
+          "Categories"
+        ],
         "description": "",
         "parameters": [
           {
@@ -259,6 +337,9 @@
         }
       },
       "delete": {
+        "tags": [
+          "Categories"
+        ],
         "description": "",
         "parameters": [
           {
@@ -279,6 +360,9 @@
     },
     "/products": {
       "get": {
+        "tags": [
+          "Products"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -287,6 +371,9 @@
         }
       },
       "post": {
+        "tags": [
+          "Products"
+        ],
         "description": "",
         "responses": {
           "201": {
@@ -297,6 +384,9 @@
     },
     "/products/search": {
       "get": {
+        "tags": [
+          "Products"
+        ],
         "description": "",
         "parameters": [
           {
@@ -316,6 +406,9 @@
     },
     "/products/{id}": {
       "get": {
+        "tags": [
+          "Products"
+        ],
         "description": "",
         "parameters": [
           {
@@ -334,6 +427,9 @@
         }
       },
       "put": {
+        "tags": [
+          "Products"
+        ],
         "description": "",
         "parameters": [
           {
@@ -352,6 +448,9 @@
         }
       },
       "delete": {
+        "tags": [
+          "Products"
+        ],
         "description": "",
         "parameters": [
           {
@@ -372,6 +471,9 @@
     },
     "/payment-methods": {
       "get": {
+        "tags": [
+          "Payment Methods"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -380,6 +482,9 @@
         }
       },
       "post": {
+        "tags": [
+          "Payment Methods"
+        ],
         "description": "",
         "responses": {
           "201": {
@@ -390,6 +495,9 @@
     },
     "/payment-methods/{id}": {
       "get": {
+        "tags": [
+          "Payment Methods"
+        ],
         "description": "",
         "parameters": [
           {
@@ -408,6 +516,9 @@
         }
       },
       "put": {
+        "tags": [
+          "Payment Methods"
+        ],
         "description": "",
         "parameters": [
           {
@@ -426,6 +537,9 @@
         }
       },
       "delete": {
+        "tags": [
+          "Payment Methods"
+        ],
         "description": "",
         "parameters": [
           {
@@ -446,6 +560,9 @@
     },
     "/orders": {
       "post": {
+        "tags": [
+          "Orders"
+        ],
         "description": "",
         "responses": {
           "201": {
@@ -454,6 +571,9 @@
         }
       },
       "get": {
+        "tags": [
+          "Orders"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -464,6 +584,9 @@
     },
     "/orders/{id}/items": {
       "get": {
+        "tags": [
+          "Orders"
+        ],
         "description": "",
         "parameters": [
           {
@@ -484,6 +607,9 @@
     },
     "/orders/{id}": {
       "get": {
+        "tags": [
+          "Orders"
+        ],
         "description": "",
         "parameters": [
           {
@@ -504,6 +630,9 @@
     },
     "/orders/{id}/status": {
       "post": {
+        "tags": [
+          "Orders"
+        ],
         "description": "",
         "parameters": [
           {
